# heterogeneous-compute-talk

./: CMakeLists.txt  README.md  draft.md  outline.md
docs/: brainstorm.md  outline.md  talkpoints.md
src/: CMakeLists.txt  add_cpu.cpp  add_gpu.cpp  hello.c  hello.cpp  main.c  main.cpp  rotate_cpu.c  rotate_cpu.cpp  rotate_gpu.cpp  utils.hpp
src/kernels/: add.cl  hello.cl  rotate.cl
